--- a/.github/workflows/002_multiple_jobs_v3.yml
+++ b/.github/workflows/002_multiple_jobs_v3.yml
@@ -31,7 +31,7 @@ jobs:
         # Specify parameters for the action
         # Documentation: https://github.com/actions/upload-artifact/blob/main/action.yml
         with:
-          name:  # TODO: give a name to this artifact (mandatory option)
+          name: testing
           path: message.txt  # Mandatory option
           if-no-files-found: error
           retention-days: 7
@@ -39,7 +39,7 @@ jobs:
   # Define job #2
   second-job:
     runs-on: ubuntu-latest
-    needs:  # TODO: make second-job run after first-job
+    needs:  first-job
 
     steps:
       - name: Sleep for a while
@@ -53,8 +53,8 @@ jobs:
       - name: Download message from Job N°1
         # TODO: use the actions/download-artifact@v3 action to restore the artifact in second-job
         #       docs: https://github.com/actions/download-artifact#usage
-        with:
-          # TODO: specify the name of the artifact to be restored
+        with: actions/002 - Multiple jobs v3
+          testing
 
       - name: Ensure message.txt exists
         # Useful for debugging
